Bug 72790 - FILESAVE: DOCX Libreoffice gives error while saving file, if Table styles are used
Summary: FILESAVE: DOCX Libreoffice gives error while saving file, if Table styles are...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Nikhil Walvekar
URL:
Whiteboard: target:4.3.0 target:7.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-17 13:29 UTC by Nikhil Walvekar
Modified: 2023-04-27 10:21 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File to be saved (969.64 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-12-17 13:29 UTC, Nikhil Walvekar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nikhil Walvekar 2013-12-17 13:29:20 UTC
Created attachment 90877 [details]
File to be saved

DOCX containing Table Styles

Problem description: 
LO opens DOCX, but when we try to save it, save failed error is shown.

Steps to reproduce:
1. Open attached DOCX in LO
2. Save as NEW.DOCX

Current behavior:
Save failed error message is shown

Expected behavior:
File should be saved properly in LO
Comment 1 Jorendc 2013-12-17 13:57:09 UTC
reproducible, tested using Mac OSX 10.9 with LibreOffice Version: 4.2.0.0.beta2+
Build ID: da443ab58158d2b7ffa52742cec2be76e3aa2026
TinderBox: MacOSX-10.8@21-10.7SDK, Branch:libreoffice-4-2, Time: 2013-12-13_00:38:10

Kind regards,
Joren
Comment 2 Commit Notification 2013-12-18 09:06:17 UTC
Nikhil Walvekar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=910ec33b72fa7675e606c4389d50d3a0d4adbe45

fdo#72790 Clear interop grab bag name, once grab bag is cleared.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Jorendc 2013-12-29 21:48:09 UTC
Looks fixed to me, tested using Windows 8.1 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: 5be7ec4193b892e5643ff5f3f2e6755319569190
TinderBox: Win-x86@39, Branch:master, Time: 2013-12-27_23:55:02

@Nikhil: can we backport this to 4.2-branch as well?
Mark as RESOLVED FIXED?

Thanks for your great work!

Kind regards,
Joren
Comment 4 Nikhil Walvekar 2013-12-30 04:59:52 UTC
@Jorendc: yes sure.

Regards,
Nikhil
Comment 5 Jorendc 2013-12-30 10:33:07 UTC
(In reply to comment #4)
> @Jorendc: yes sure.

As developer whom worked on this bug, you may mark bugs as RESOLVED FIXED when the goal of the bug report is reached :). So, feel free to mark every 'done' bug as such. Others can mark it as VERIFIED FIXED once they can't reproduce the mentioned behavior. (therefore I'm going to mark this one as VERIFIED FIXED, due the fact I can verify it ;-) )

Kind regards,
Joren
Comment 6 Nikhil Walvekar 2013-12-30 11:20:26 UTC
@Joren: Thanks for the clarification on the status. Should we mark Resolved Fixed only after code is merged?

Regards,
Nikhil
Comment 7 Jorendc 2013-12-30 11:48:23 UTC
(In reply to comment #6)
> @Joren: Thanks for the clarification on the status. Should we mark Resolved
> Fixed only after code is merged?

:-)
Depends from developer to developer. Most common is: if the bug is completely fixed/merged in the master version (currently that's 4.3.0), you can mark it as RESOLVED FIXED.
If the commits are backportable to older versions, you can send them to gerrit for verification, but it doesn't matter the bug is already marked as FIXED.

Some developers prefer to close bugs when the fix is backported to older versions as well (so it's in 4.1 and/or 4.2 too). But there might be a chance they forget to mark it at the end as FIXED.

Summary:
Send/merge patches in current master -> if you, the developer, are convinced those patches fixes the goal of the bug -> mark it as RESOLVED FIXED. If you can backport the changes to older versions of LibreOffice, you can let it marked as RESOLVED FIXED, but just send your patches to gerrit for review.

Kind regards,
Joren
Comment 8 Jorendc 2013-12-30 11:51:48 UTC
(In reply to comment #6)
> @Joren: Thanks for the clarification on the status. Should we mark Resolved
> Fixed only after code is merged?

Addition on previous comment: we mostly change for complex patches the bug status only after the code is merged :-). It might happen the commit/patch needs some extra work (reviewed). When this process is taking a while (for example: some weeks), the bug is already marked as RESOLVED FIXED, but the code isn't merged in a libreoffice version yet :-). If the commit is abandoned, it might happen a bug is marked as fixed, but no commit is under review or merged.
Comment 9 Commit Notification 2023-04-25 07:29:43 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3c2e4d454aaabcd61593e670a90638a185046539

sw floattable, crashtesting: fix PDF export of fdo72790-1.docx, part 1

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-04-26 07:40:07 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9c23f533d6749e94971f04e18f1537472cac6b86

sw floattable, crashtesting: fix PDF export of fdo72790-1.docx, part 2

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-04-26 12:59:38 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/73bada774ef37efd5a4498ccc083b1358314557d

sw floattable, crashtesting: fix PDF export of fdo72790-1.docx, part 3

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-04-27 10:21:55 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4b6b9411e4ac912817dd804782ad2054bc0d1660

sw floattable, crashtesting: fix PDF export of fdo72790-1.docx, part 4

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.