fdo#72790 Clear interop grab bag name, once grab bag is cleared. This fixes problem while exporting documents containing table styles.

Change-Id: I0c39ab18eda3b4aacbccfa9d5a6b0d3ac7ab005c
Reviewed-on: https://gerrit.libreoffice.org/7120
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>