writerfilter/source/dmapper/DomainMapper.cxx
@@ -4440,6 +4440,7 @@ beans::PropertyValue DomainMapper::getInteropGrabBag()
         *pSeq++ = *i;
 
     m_pImpl->m_aInteropGrabBag.clear();
+    m_pImpl->m_aInteropGrabBagName = "";
     aRet.Value = uno::makeAny(aSeq);
     return aRet;
 }
